# demo-warp-rest-api-jwt-openapi

./: .env.example  .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: errors.rs  index.rs  main.rs  routes.rs  server.rs
api/src/conf/: context.rs
api/src/context/: auth.rs  config.rs  context.rs  jwt.rs  mod.rs
api/src/handles/: health.rs  mod.rs  token.rs  users.rs
db/: Cargo.toml
db/migrations/2022-10-24-095152_create_users/: down.sql  up.sql
db/src/: database.rs  lib.rs
db/src/models/: user.rs
src/: main.rs  server.rs
src/conf/: config.rs  context.rs
src/context/: mod.rs
