[package]
name = "demo-warp-rest-api-jwt-openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4", features = ["serde"] }
demo_db = { package = "demo-db", path = "./db"}
dotenvy = "0.15"
derive_more = "0.99"
diesel = { version = "1.4.7", features = ["chrono", "postgres", "r2d2", ] }
env_logger = "0.9"
envy = "0.4"
hyper = "0.14"
jsonwebtoken = "8"
lazy_static = "1.4"
listenfd = "1"
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
