[workspace]
resolver = "2"

members = [
    "api",
    "db",
]

default-members = [
    "api",
]

[profile.release]
debug = true

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true

# Build guppy in opt mode so that x commands are faster.
[profile.dev.package.guppy]
opt-level = 3
