[package]
name = "demo-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demo_db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "extras", "uuid"] }
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
base62-uuid = "1.1.0"
log = "0.4"
